--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${EUREKA_SERVER}
 
 spring.cloud.gateway.routes[0].id=${GATEWAY_ROUTE_ID}
 spring.cloud.gateway.routes[0].uri=${GATEWAY_ROUTE_URI}
