--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,14 +22,14 @@ spring.cloud.gateway.routes[0].filters[0]=${GATEWAY_ROUTE_FILTERS}
 spring.cloud.gateway.routes[1].id=${MATCH_ROUTE_ID}
 spring.cloud.gateway.routes[1].uri=${MATCH_ROUTE_URI}
 spring.cloud.gateway.routes[1].predicates[0]=${MATCH_ROUTE_PREDICATES}
-spring.cloud.gateway.routes[1].filters[0]=${MATCH_ROUTE_FILTERS}
-spring.cloud.gateway.routes[1].filters[1]=CircuitBreaker=name=matchCircuitBreaker,fallbackUri=forward:/fallback/match
+spring.cloud.gateway.routes[1].filters[0]=${MATCH_ROUTE_FILTERS_0}
+spring.cloud.gateway.routes[1].filters[1]=${MATCH_ROUTE_FILTERS_1}
 
 spring.cloud.gateway.routes[2].id=${ACEITAR_MATCH_ROUTE_ID}
 spring.cloud.gateway.routes[2].uri=${ACEITAR_MATCH_ROUTE_URI}
 spring.cloud.gateway.routes[2].predicates[0]=${ACEITAR_MATCH_ROUTE_PREDICATES}
-spring.cloud.gateway.routes[2].filters[0]=${ACEITAR_MATCH_ROUTE_FILTERS}
-spring.cloud.gateway.routes[2].filters[1]=CircuitBreaker=name=aceitarMatchCB,fallbackUri=forward:/fallback/match
+spring.cloud.gateway.routes[2].filters[0]=${ACEITAR_MATCH_ROUTE_FILTERS_0}
+spring.cloud.gateway.routes[2].filters[1]=${ACEITAR_MATCH_ROUTE_FILTERS_1}
 
 spring.cloud.gateway.routes[3].id=${CREATE-CHECKOUT-SESSION_ROUTE_ID}
 spring.cloud.gateway.routes[3].uri=${CREATE-CHECKOUT-SESSION_ROUTE_URI}
