--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ jwt.expiration=${JWT_EXPIRATION}
 
 server.port=${SERVER_PORT:8087}
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
 # Timeouts para chamadas HTTP reativas (opcional)
 spring.cloud.gateway.httpclient.connect-timeout=5000
 spring.cloud.gateway.httpclient.response-timeout=5000ms
