--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,10 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
     }
 }
+
+configurations {
+    all {
+        exclude group: 'org.springframework.cloud', module: 'spring-cloud-starter-netflix-eureka-client'
+        exclude group: 'com.netflix.eureka'
+    }
+}
