ajuste no mappeamento de serviços

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/users/**
 # Video Service
 spring.cloud.gateway.routes[3].id=video-service
 spring.cloud.gateway.routes[3].uri=${VIDEO_SERVICE_URL}
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/video/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/videos/**
 
 # Payment Service
 spring.cloud.gateway.routes[4].id=payment-service
