--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,36 @@
 spring.application.name=gateway-service
+server.port=${SERVER_PORT:8087}
 
 # JWT
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
-
-server.port=${SERVER_PORT:8087}
-
+# Sem Eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# Timeouts para chamadas HTTP reativas (opcional)
-spring.cloud.gateway.httpclient.connect-timeout=5000
-spring.cloud.gateway.httpclient.response-timeout=5000ms
+# ===== HTTP client (Netty) =====
+# Tempo para abrir conexão e para receber a resposta COMPLETA (uploads/encodes demoram)
+spring.cloud.gateway.httpclient.connect-timeout=20000
+spring.cloud.gateway.httpclient.response-timeout=600s
 
+# Buffer de partes pequenas (headers/form fields). NÃO carrega o arquivo inteiro em memória.
+spring.codec.max-in-memory-size=16MB
+
+# ===== Filtros globais =====
+# Evita enrosco com 100-continue
+spring.cloud.gateway.default-filters[0]=RemoveRequestHeader=Expect
+# Permite corpo grande (ajuste conforme sua realidade)
+spring.cloud.gateway.default-filters[1].name=RequestSize
+spring.cloud.gateway.default-filters[1].args.maxSize=1024MB
+
+# ===== CORS =====
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].exposedHeaders=Content-Disposition,Location
 
-
+# ===== Rotas =====
 # Match Service
 spring.cloud.gateway.routes[0].id=match-service
 spring.cloud.gateway.routes[0].uri=${MATCH_SERVICE_URL}
@@ -28,7 +41,6 @@ spring.cloud.gateway.routes[1].id=subscription-service
 spring.cloud.gateway.routes[1].uri=${SUBSCRIPTION_SERVICE_URL}
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/subscription/**
 
-
 # User Service
 spring.cloud.gateway.routes[2].id=user-service
 spring.cloud.gateway.routes[2].uri=${USER_SERVICE_URL}
@@ -38,6 +50,9 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/users/**
 spring.cloud.gateway.routes[3].id=video-service
 spring.cloud.gateway.routes[3].uri=${VIDEO_SERVICE_URL}
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/videos/**
+# Timeouts específicos da rota (ms). Sobrepõe o global, útil para upload/encode.
+spring.cloud.gateway.routes[3].metadata.connect-timeout=20000
+spring.cloud.gateway.routes[3].metadata.response-timeout=600000
 
 # Payment Service
 spring.cloud.gateway.routes[4].id=payment-service
@@ -54,7 +69,5 @@ spring.cloud.gateway.routes[6].id=appointment-service
 spring.cloud.gateway.routes[6].uri=${APPOINTMENT_SERVICE_URL}
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/appointment/**
 
-
-# Logging para debug de rotas
+# Logs
 logging.level.org.springframework.cloud.gateway=DEBUG
-#logging.level.org.springframework.cloud.gateway=DEBUG
