--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,17 +10,14 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 # ===== HTTP client (Netty) =====
-# Tempo para abrir conexão e para receber a resposta COMPLETA (uploads/encodes demoram)
 spring.cloud.gateway.httpclient.connect-timeout=20000
 spring.cloud.gateway.httpclient.response-timeout=600s
 
-# Buffer de partes pequenas (headers/form fields). NÃO carrega o arquivo inteiro em memória.
+# Buffer p/ partes pequenas (não carrega o arquivo todo em memória)
 spring.codec.max-in-memory-size=16MB
 
 # ===== Filtros globais =====
-# Evita enrosco com 100-continue
 spring.cloud.gateway.default-filters[0]=RemoveRequestHeader=Expect
-# Permite corpo grande (ajuste conforme sua realidade)
 spring.cloud.gateway.default-filters[1].name=RequestSize
 spring.cloud.gateway.default-filters[1].args.maxSize=1024MB
 
@@ -31,43 +28,37 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].exposedHeaders=Content-Disposition,Location
 
 # ===== Rotas =====
-# Match Service
 spring.cloud.gateway.routes[0].id=match-service
 spring.cloud.gateway.routes[0].uri=${MATCH_SERVICE_URL}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/match/**
 
-# Subscription Service
 spring.cloud.gateway.routes[1].id=subscription-service
 spring.cloud.gateway.routes[1].uri=${SUBSCRIPTION_SERVICE_URL}
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/subscription/**
 
-# User Service
 spring.cloud.gateway.routes[2].id=user-service
 spring.cloud.gateway.routes[2].uri=${USER_SERVICE_URL}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/users/**
 
-# Video Service
 spring.cloud.gateway.routes[3].id=video-service
 spring.cloud.gateway.routes[3].uri=${VIDEO_SERVICE_URL}
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/videos/**
-# Timeouts específicos da rota (ms). Sobrepõe o global, útil para upload/encode.
 spring.cloud.gateway.routes[3].metadata.connect-timeout=20000
 spring.cloud.gateway.routes[3].metadata.response-timeout=600000
 
-# Payment Service
 spring.cloud.gateway.routes[4].id=payment-service
 spring.cloud.gateway.routes[4].uri=${PAYMENT_SERVICE_URL}
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payment/**
 
-# Email Service
 spring.cloud.gateway.routes[5].id=email-service
 spring.cloud.gateway.routes[5].uri=${EMAIL_SERVICE_URL}
 spring.cloud.gateway.routes[5].predicates[0]=Path=/api/email/**
 
-# Appointment Service
 spring.cloud.gateway.routes[6].id=appointment-service
 spring.cloud.gateway.routes[6].uri=${APPOINTMENT_SERVICE_URL}
 spring.cloud.gateway.routes[6].predicates[0]=Path=/api/appointment/**
 
-# Logs
+# Logs (DEBUG p/ investigação; depois troque p/ INFO)
 logging.level.org.springframework.cloud.gateway=DEBUG
+# logging.level.org.springframework.cloud.gateway=INFO
+# logging.level.reactor.netty=INFO
