gateway ajuste de rota

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].exposedHeaders=Content-
 # ===== Rotas =====
 spring.cloud.gateway.routes[0].id=match-service
 spring.cloud.gateway.routes[0].uri=${MATCH_SERVICE_URL}
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/match/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/matches/**
 
 spring.cloud.gateway.routes[1].id=subscription-service
 spring.cloud.gateway.routes[1].uri=${SUBSCRIPTION_SERVICE_URL}
