ajustes de rota 2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,10 +32,6 @@ spring.cloud.gateway.routes[0].id=match-service
 spring.cloud.gateway.routes[0].uri=${MATCH_SERVICE_URL}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/matches/**
 
-spring.cloud.gateway.routes[1].id=subscription-service
-spring.cloud.gateway.routes[1].uri=${SUBSCRIPTION_SERVICE_URL}
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/subscription/**
-
 spring.cloud.gateway.routes[2].id=user-service
 spring.cloud.gateway.routes[2].uri=${USER_SERVICE_URL}
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/users/**
@@ -48,15 +44,13 @@ spring.cloud.gateway.routes[3].metadata.response-timeout=600000
 
 spring.cloud.gateway.routes[4].id=payment-service
 spring.cloud.gateway.routes[4].uri=${PAYMENT_SERVICE_URL}
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payment/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payments/**
 
-spring.cloud.gateway.routes[5].id=email-service
-spring.cloud.gateway.routes[5].uri=${EMAIL_SERVICE_URL}
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/email/**
+spring.cloud.gateway.routes[5].id=payment-service
+spring.cloud.gateway.routes[5].uri=${PAYMENT_SERVICE_URL}
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/subscriptions/**
 
-spring.cloud.gateway.routes[6].id=appointment-service
-spring.cloud.gateway.routes[6].uri=${APPOINTMENT_SERVICE_URL}
-spring.cloud.gateway.routes[6].predicates[0]=Path=/api/appointment/**
+
 
 # Logs (DEBUG p/ investigação; depois troque p/ INFO)
 logging.level.org.springframework.cloud.gateway=DEBUG
