--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,25 +32,23 @@ spring.cloud.gateway.routes[0].id=match-service
 spring.cloud.gateway.routes[0].uri=${MATCH_SERVICE_URL}
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/matches/**
 
-spring.cloud.gateway.routes[2].id=user-service
-spring.cloud.gateway.routes[2].uri=${USER_SERVICE_URL}
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/users/**
+spring.cloud.gateway.routes[1].id=user-service
+spring.cloud.gateway.routes[1].uri=${USER_SERVICE_URL}
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
 
-spring.cloud.gateway.routes[3].id=video-service
-spring.cloud.gateway.routes[3].uri=${VIDEO_SERVICE_URL}
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/videos/**
-spring.cloud.gateway.routes[3].metadata.connect-timeout=20000
-spring.cloud.gateway.routes[3].metadata.response-timeout=600000
+spring.cloud.gateway.routes[2].id=video-service
+spring.cloud.gateway.routes[2].uri=${VIDEO_SERVICE_URL}
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/videos/**
+spring.cloud.gateway.routes[2].metadata.connect-timeout=20000
+spring.cloud.gateway.routes[2].metadata.response-timeout=600s
 
-spring.cloud.gateway.routes[4].id=payment-service
+spring.cloud.gateway.routes[3].id=payment-payments
+spring.cloud.gateway.routes[3].uri=${PAYMENT_SERVICE_URL}
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/payments/**
+
+spring.cloud.gateway.routes[4].id=payment-subscriptions
 spring.cloud.gateway.routes[4].uri=${PAYMENT_SERVICE_URL}
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/payments/**
-
-spring.cloud.gateway.routes[5].id=payment-service
-spring.cloud.gateway.routes[5].uri=${PAYMENT_SERVICE_URL}
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/subscriptions/**
-
-
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/subscriptions/**
 
 # Logs (DEBUG p/ investigação; depois troque p/ INFO)
 logging.level.org.springframework.cloud.gateway=DEBUG
