--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,10 @@ spring.cloud.gateway.routes[4].id=payment-subscriptions
 spring.cloud.gateway.routes[4].uri=${PAYMENT_SERVICE_URL}
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/subscriptions/**
 
+spring.cloud.gateway.routes[5].id=payment-subscriptions-pix
+spring.cloud.gateway.routes[5].uri=${PAYMENT_SERVICE_URL}
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/pix/**
+
 # Logs (DEBUG p/ investigação; depois troque p/ INFO)
 logging.level.org.springframework.cloud.gateway=DEBUG
 # logging.level.org.springframework.cloud.gateway=INFO
