--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,17 +42,14 @@ spring.cloud.gateway.routes[2].predicates[0]=Path=/api/videos/**
 spring.cloud.gateway.routes[2].metadata.connect-timeout=20000
 spring.cloud.gateway.routes[2].metadata.response-timeout=600s
 
-spring.cloud.gateway.routes[3].id=payment-payments
+spring.cloud.gateway.routes[3].id=stripe-payments-webhook
 spring.cloud.gateway.routes[3].uri=${PAYMENT_SERVICE_URL}
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/payments/**
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/stripe/**
 
-spring.cloud.gateway.routes[4].id=payment-subscriptions
+spring.cloud.gateway.routes[4].id=billing-payments
 spring.cloud.gateway.routes[4].uri=${PAYMENT_SERVICE_URL}
-spring.cloud.gateway.routes[4].predicates[0]=Path=/api/subscriptions/**
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/billing/**
 
-spring.cloud.gateway.routes[5].id=payment-subscriptions-pix
-spring.cloud.gateway.routes[5].uri=${PAYMENT_SERVICE_URL}
-spring.cloud.gateway.routes[5].predicates[0]=Path=/api/pix/**
 
 # Logs (DEBUG p/ investigação; depois troque p/ INFO)
 logging.level.org.springframework.cloud.gateway=DEBUG
